Fixed text alignment issues

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,6 +5,8 @@
 
 .info-container {
     margin-top: 3em;
+    padding: 2em;
+    background-color: #C2C1C0;
 }
 
 
@@ -12,4 +14,9 @@
     transform: translateY(-20%);
     width: 100%;
     height: auto;
+}
+
+.objective-text-container {
+    background-color: #C2C1C0;
+    text-align: center;
 }
