--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -33,7 +33,7 @@
     display: flex;
     background-color: #C2C1C0;
     width: 100%;
-    height: 2em;
+    height: 2.5em;
     justify-content: space-evenly;
 }
 
@@ -43,7 +43,7 @@
     text-align: center;
     min-width: 10em;
     font-weight: 800;
-    font-size: 1.2rem;
+    font-size: 1.3em;
 }
 
 .nav-actions>button:hover {
