--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
+:root {
+    /* 1rem = 10px*/
+    font-size: 62.5%;
+}
+
 .main-background {
     background-color: #E6E6E6;
     width: 100%;
@@ -21,5 +26,9 @@ body {
 
 body {
     margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-family: Roboto, "Trueno", sans-serif;
+}
+
+p, a {
+    font-size: 1.6rem;
 }
